--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  body {
+    @apply text-gray-700;
+  }
+  p {
+    @apply mb-4;
+  }
+}
+@layer components {
+  .custom-logo-link {
+    @apply block;
+  }
+  img.custom-logo {
+    @apply rounded-full w-16 mx-auto mb-1;
+  }
+  .site-branding h1 a {
+    @apply mb-4 text-sm text-center uppercase tracking-wider text-gray-500;
+  }
+  .site-branding h1 p {
+    @apply mb-4 text-sm text-center uppercase tracking-wider text-gray-500;
+  }
+}
