--- a/app.css
+++ b/app.css
@@ -1025,9 +1025,15 @@ img.custom-logo {
 	border-width: 1px !important;
 	--tw-border-opacity: 1 !important;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity)) !important;
-	padding: 0.5rem !important;
+	padding-left: 1rem !important;
+	padding-right: 1rem !important;
+	padding-top: 0.5rem !important;
+	padding-bottom: 0.5rem !important;
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05) !important;
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+.formkit-form [data-style="minimal"] {
+	padding: 0px !important;
 }
 .formkit-alert {
 	font-size: 0.875rem;
